gcc/testsuite/gdc.test/runnable/imports/test24b.d
module imports.test24b;

public import imports.test24c;
