gcc/testsuite/gdc.test/fail_compilation/test5412c.d
module test5412c;

import test5412c2 = imports.test5412a;
import test5412c2;
